--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,9 @@ input[type=submit]:hover {
 
 .map {
     display: block;
+    width: 300px;
+    height: 300px;
+    max-width: 100%;
     border: 1px solid #737475;
     border-radius: 3px;
     background-color: #2D2E2E;
