--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
+    transition: 0.35s;
 }
 
 #worldselector::-ms-expand {
@@ -43,11 +44,13 @@ body {
 #worldselector:hover, #worldselector:focus, #worldselector:hover + #fakedownarrow, #worldselector:focus + #fakedownarrow {
     background: #2D2E2E;
     outline: 0;
+    transition: 0.05s;
 }
 
 #worldselector:active, #worldselector:active + #fakedownarrow {
     background: #2b2b2c;
     outline: 0;
+    transition: 0.05s;
 }
 
 #worldselector option, #worldselector optgroup {
@@ -70,6 +73,7 @@ body {
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
     cursor: pointer;
+    transition: 0.35s;
 }
 
 #routeform {
