--- a/styles.css
+++ b/styles.css
@@ -250,7 +250,7 @@ input[type=submit]:hover {
     margin: 32px auto;
     display: block;
     max-width: 100%;
-    width: 600px;
+    width: 400px;
 }
 
 #output .step .item {
@@ -278,6 +278,69 @@ input[type=submit]:hover {
     background-size: 15%;
     font-size: 13px;
     text-align: center;
+}
+
+/* route timeline */
+.timeline-station {
+    display: block;
+    white-space: nowrap;
+    color: #cacaca;
+}
+
+.timeline-station.transfer {
+    font-weight: bold !important;
+    color: #EDEDED;
+}
+
+.timeline-station > * {
+    display: inline-block;
+    vertical-align: middle;
+    height: 24px;
+    line-height: 24px;
+    padding: 7px 6px;
+}
+
+.timeline-station-time {
+    color: #1e90ff;
+    font-size: smaller;
+    width: 40px;
+    padding-right: 0px;
+}
+
+.timeline-station-icon {
+    width: 32px;
+    height: 38px;
+    padding: 0px 8px 0px 0px;
+    background-image: url('icons/timeline-halt.png');
+    background-position: center center;
+    background-size: 28px 42px;
+    background-repeat: no-repeat;
+}
+
+.timeline-station.transfer .timeline-station-icon {
+    background-image: url('icons/timeline-transfer.png');
+}
+
+.timeline-station.start .timeline-station-icon {
+    background-image: url('icons/timeline-start.png');
+}
+
+.timeline-station.end .timeline-station-icon {
+    background-image: url('icons/timeline-end.png');
+}
+
+.timeline-station-name {
+
+}
+
+.timeline-station-platform {
+    font-size: small;
+    float: right;
+    text-align: right;
+}
+
+.timeline-station-platform::before {
+    content: 'spoor ';
 }
 
 @media screen and (max-width: 500px) {
